# colang

./: Cargo.toml  LICENSE  README.md
colang/: Cargo.toml
colang-cli/: Cargo.toml
colang-cli/src/: ast_gui.rs  lib.rs  main.rs
colang-cli/tests/: compiler_test.rs  feature_test.rs  interpreter_test.rs  io_test.rs  program_test.rs
colang-cli/tests/samples/compile_error/: add_operator_different_types.co  add_type_parameter_any.co  address_of_rvalue.co  binary_operator_wrong_type.co  empty_array_in_ambiguous_context.co  field_type_cycle_multiple_types.co  index_method_wrong_signature.co  is_expr_non_pointer.co  is_expr_pointers_to_different_types.co  method_without_self_parameter.co  null_ambiguous_type.co  push_wrong_num_arguments.co  rvalue_push.co  unknown_escape_in_str_literal.co
colang-cli/tests/samples/good/: abs_method.co  arithmetic_precedence.co  array_type_syntax.co  block_expressions.co  bool_array_methods.co  early_return.co  empty_array_literal_in_template_method.co  fact.co  function_value_type_inference.co  int_division_is_left_associative.co  int_variables.co  logical_operators.co  pointer_method_auto_deref.co  pointer_parameter.co  shadow.co  strings_share_memory.co  struct_fields.co  struct_method_by_pointer.co  struct_method_by_value.co  template_method_calls_other_method.co
colang-cli/tests/samples/runtime_error/: division_by_zero.co  modulo_by_zero.co  pop_from_empty.co
colang/src/: ast.rs  context.rs  errors.rs  escapes.rs  grammar.lalrpop  grammar.pest  lib.rs  options.rs  parser.rs  scope.rs  source.rs
colang/src/analyzer/: basic_types.rs  complete_types.rs  function_instantiations.rs  global_structure.rs  incomplete_types.rs  mod.rs  trait_exprs.rs  trait_wiring.rs  type_exprs.rs  visitor.rs
colang/src/analyzer/bodies/: dual.rs  mod.rs
colang/src/analyzer/traits/: basic.rs  mod.rs  wiring.rs
colang/src/analyzer/utils/: global_visitor.rs  mod.rs
colang/src/ast/: expressions.rs  globals.rs  mod.rs  statements.rs  type_expressions.rs
colang/src/backends/: mod.rs
colang/src/errors/: mod.rs
colang/src/errors/kinds/: e0001_syntax_error.rs  e0002_named_entity_not_found.rs  e0003_named_entity_kind_mismatch.rs  e0004_named_entity_already_defined.rs  e0005_condition_not_bool.rs  e0006_array_size_not_int.rs  e0007_while_body_not_void.rs  e0008_deref_operand_not_pointer.rs  e0009_read_unsupported_type.rs  e0010_readln_unsupported_type.rs  e0011_write_value_not_stringable.rs  e0012_explicit_reference_to_void.rs  e0013_variable_no_type_or_initializer.rs  e0014_variable_initializer_is_void.rs  e0015_return_value_in_void_function.rs  e0016_return_no_value_in_non_void_function.rs  e0017_if_expression_missing_else.rs  e0018_assignment_type_mismatch.rs  e0019_variable_initializer_type_mismatch.rs  e0020_function_body_type_mismatch.rs  e0021_return_statement_type_mismatch.rs  e0022_if_expression_branch_type_mismatch.rs  e0023_is_expression_type_mismatch.rs  e0024_call_argument_type_mismatch.rs  e0025_array_elements_type_mismatch.rs  e0026_call_wrong_number_of_arguments.rs  e0027_wrong_number_of_type_template_arguments.rs  e0028_assignment_target_not_lvalue.rs  e0029_read_target_not_lvalue.rs  (+30 more)
colang/src/parser/: base.rs  block.rs  chars.rs  comma_list.rs  common.rs  context.rs  equals.rs  function_def.rs  ident.rs  input.rs  mod.rs  normal_param_def.rs  one_of.rs  param_def.rs  param_list.rs  prelude.rs  program.rs  repeat.rs  scalar_type_expr.rs  seq.rs  stmt_or_expr.rs  terminals.rs  type_expr.rs  words.rs
colang/src/program/: checks.rs  display.rs  field.rs  function.rs  internal.rs  mod.rs  origin.rs  symbols.rs  typing.rs  values.rs  variable.rs
colang/src/stdlib/: mod.rs  std.co
colang/src/utils/: graphs.rs  mod.rs  sexp.rs
(+294 files in other folders)
