[package]
name = "colang"
version = "0.0.4"
authors = ["Pavel Senchanka <pavel.senchanka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.18.1", features = ["lexer"] }


[dependencies]
codespan-reporting = "0.9.1"
lalrpop-util = "0.18.1"
regex = "1"
