[package]
name = "colang-cli"
version = "0.1.0-rc1"
authors = ["Pavel Senchanka <pavel.senchanka@gmail.com>"]
edition = "2018"


[dependencies]
codespan-reporting = "0.9.1"
colang = { path = "../colang" }
colang-interpreter = { path = "../colang-interpreter" }


[dev-dependencies]
test-generator = "0.3.0"
