[package]
name = "colang-cli"
version = "0.1.0-rc2"
authors = ["Pavel Senchanka <pavel.senchanka@gmail.com>"]
edition = "2018"


[dependencies]
codespan-reporting = "0.9.1"
clap = "2.33.0"
colang = { path = "../colang" }
colang-interpreter = { path = "../colang-interpreter" }
colang-c-target = { path = "../colang-c-target" }


[dev-dependencies]
speculate = "0.1.2"
test-generator = "0.3.0"
tempfile = "3.1.0"