[package]
name = "colang"
version = "0.0.8"
authors = ["Pavel Senchanka <pavel.senchanka@gmail.com>"]
edition = "2018"


[build-dependencies]
# We can switch to a release once comment support lands.
lalrpop = { git = "https://github.com/lalrpop/lalrpop", features = ["lexer"] }


[dependencies]
codespan-reporting = "0.9.1"
lalrpop-util = { git = "https://github.com/lalrpop/lalrpop", features = ["lexer"] }
regex = "1"
