[package]
name = "colang"
version = "0.1.0-rc1"
authors = ["Pavel Senchanka <pavel.senchanka@gmail.com>"]
edition = "2018"


[build-dependencies]
# We can switch to a release once comment support lands.
lalrpop = { git = "https://github.com/lalrpop/lalrpop", features = ["lexer"] }


[dependencies]
codespan-reporting = "0.9.1"
petgraph = "0.5.0"
regex = "1"
lalrpop-util = { git = "https://github.com/lalrpop/lalrpop", features = ["lexer"] }
sexp = { path = "../sexp" }
