[package]
name = "colang"
version = "0.1.0"
authors = ["Pavel Senchanka <pavel.senchanka@gmail.com>"]
edition = "2018"


[build-dependencies]
# We can switch to a release once comment support lands.
lalrpop = { git = "https://github.com/lalrpop/lalrpop", features = ["lexer"] }


[dependencies]
codespan-reporting = "0.9.1"
enum_dispatch = "0.3.0"
lazy_static = "1.4.0"
petgraph = "0.5.0"
regex = "1"
lalrpop-util = { git = "https://github.com/lalrpop/lalrpop", features = ["lexer"] }
